--- a/Rendyll.css
+++ b/Rendyll.css
@@ -44,7 +44,7 @@ body{
     top: 55%;
     left: -4%;
     height: 170px;
-    width: 520px;
+    width: 480px;
     border-radius: 10%;
     background-color: rgba(221,152,24,255) ;
 }
@@ -61,6 +61,14 @@ body{
     width: 120px;
     top: 22%;
     left: 43%;
+}
+.img8{
+    position: absolute;
+    height: 90px;
+    width: 90px;
+    top: 24%;
+    left: 75%;
+    rotate: 90deg;
 }
 .sale1{
     position: absolute;
@@ -185,7 +193,7 @@ body{
 .enjoy{
     position: absolute;
     font-family: "Montserrat";
-    font-weight: 500;
+    font-weight: 400;
     top: 115%;
     right: 7%;
 }
@@ -194,7 +202,7 @@ body{
     top: 150%;
     right: -4%;
     height: 170px;
-    width: 520px;
+    width: 480px;
     border-radius: 10%;
     background-color: rgba(221,152,24,255) ;
 }
@@ -211,6 +219,14 @@ body{
     width: 120px;
     top: 22%;
     left: 63%;
+}
+.img9{
+    position: absolute;
+    height: 90px;
+    width: 90px;
+    top: 24%;
+    right: 75%;
+    rotate: 90deg;
 }
 .iop{
     position: absolute;
